--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -158,11 +158,11 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #a0025a;
+  color: #000;
   text-decoration: none;
   }
 a:hover {
-  color: #6e013e;
+  color: #555;
   text-decoration: none;
   border-bottom: dashed;
   }
