--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -24,8 +24,15 @@
 - Clearing
 - Media Queries
 */
+@font-face {
+  font-family: "Droid Sans", sans-serif;
+  src: local("Droid Sans"), url(droid.ttf);
+   }
 
-
+* {
+  font-family: Droid Sans, sans-serif;
+   }
+   
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
@@ -118,13 +125,13 @@
 /* NOTE
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
+
 html {
   font-size: 62.5%; }
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
 
 
