--- a/css/custom.css
+++ b/css/custom.css
@@ -27,6 +27,10 @@
   max-width: 80%;
 }
 
+.quote {
+  max-width: 5%;
+}
+
 
 /* Values
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -84,6 +88,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+  
   .categories {
     padding: 15rem 0 8rem;
   }
