--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,7 @@
 .values {
   background-image: url('../images/values-bg.jpg');
   background-size: cover;
+  opacity: 0.75;
   color: #000;
   padding-bottom: 5rem;
 }
